# samples

./: .gitignore
a2a/: DEVELOPER_GUIDE.md  (+2 more)
ucp-store-mocker/: .gitignore  README.md  pyproject.toml
ucp-store-mocker/examples/: electronics_store.yaml  fashion_store.yaml  flower_shop.yaml  grocery_store.yaml  multi_store.yaml  restaurant.yaml  subscription_service.yaml
ucp-store-mocker/src/ucp_store_mocker/: __init__.py  __main__.py  cli.py
ucp-store-mocker/src/ucp_store_mocker/capabilities/: __init__.py  registry.py
ucp-store-mocker/src/ucp_store_mocker/capabilities/core/: __init__.py  buyer_consent.py  checkout.py  discount.py  fulfillment.py  order.py
ucp-store-mocker/src/ucp_store_mocker/capabilities/extensions/: __init__.py  gift_cards.py  loyalty.py  returns.py  reviews.py  subscriptions.py  wishlist.py
ucp-store-mocker/src/ucp_store_mocker/config/: __init__.py  defaults.py  schema.py  validator.py
ucp-store-mocker/src/ucp_store_mocker/data/: __init__.py  brand_names.json  product_descriptors.json
ucp-store-mocker/src/ucp_store_mocker/generators/: __init__.py  a2a_generator.py  data_generator.py  db_generator.py  image_generator.py  profile_generator.py  server_generator.py  store_generator.py
ucp-store-mocker/src/ucp_store_mocker/orchestration/: __init__.py  multi_store.py  registry.py
ucp-store-mocker/src/ucp_store_mocker/templates/: __init__.py  base.py
ucp-store-mocker/src/ucp_store_mocker/utils/: __init__.py  file_utils.py  jinja_env.py
ucp-store-mocker/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_generators.py
(+19 files in other folders)
